rewrite shard descriptor

--- a/workspace/Next Word Prediction.ipynb
+++ b/workspace/Next Word Prediction.ipynb
@@ -32,10 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pickle\n",
     "import re\n",
-    "\n",
-    "import numpy as np\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.optimizers import Adam\n",
@@ -64,7 +63,7 @@
     "\"\"\"\n",
     "\n",
     "\n",
-    "file = open('metamorphosis.txt', 'r', encoding = 'utf8').read()\n",
+    "file = open('metamorphosis.txt', 'r', encoding='utf8').read()\n",
     "data = re.findall('\\w+', file)"
    ],
    "metadata": {
@@ -204,8 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "model = Sequential()\n",
@@ -214,7 +212,13 @@
     "model.add(LSTM(1000))\n",
     "model.add(Dense(1000, activation=\"relu\"))\n",
     "model.add(Dense(vocab_size, activation=\"softmax\"))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
