--- a/workspace/Next_Word_Prediction_FL.ipynb
+++ b/workspace/Next_Word_Prediction_FL.ipynb
@@ -271,25 +271,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "visible-victor",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "raw",
+   "id": "foreign-gospel",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
+   },
    "source": [
     "from tensorflow.keras import Model as tf_model\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.optimizers import Adam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "foreign-gospel",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "\"\"\"\n",
     "Model definition\n",
     "\"\"\"\n",
@@ -305,48 +297,44 @@
     "        self.d1 = Dense(1000, activation='relu')\n",
     "        self.d2 = Dense(vocab_size, activation='softmax')\n",
     "\n",
-    "    def call(self, x): # todo\n",
+    "    def call(self, x):\n",
+    "        x = self.emb(x)\n",
+    "        x = self.lstm1(x)\n",
+    "        x = self.lstm2(x)\n",
+    "        x = self.d1(x)\n",
+    "        x = self.d2(x)\n",
     "        return x\n",
     "\n",
     "\n",
-    "\n",
-    "class NormalizedClassifier(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.weight = nn.Parameter(torch.Tensor(1501, 2048))\n",
-    "        self.weight.data.uniform_(-1, 1).renorm_(2,0,1e-5).mul_(1e5)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        w = self.weight\n",
-    "\n",
-    "        x = nn.functional.normalize(x, p=2, dim=1)\n",
-    "        w = nn.functional.normalize(w, p=2, dim=1)\n",
-    "\n",
-    "        return nn.functional.linear(x, w)\n",
-    "\n",
-    "\n",
-    "resnet = ResNet50()"
+    "model = Model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "greater-activation",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/merkulov/new_openfl_venv/lib/python3.7/site-packages/torch/optim/adam.py:48: UserWarning: optimizer contains a parameter group with duplicate parameters; in future, this will cause an error; see github.com/pytorch/pytorch/issues/40967 for more information\n",
-      "  super(Adam, self).__init__(params, defaults)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "parameters = list(resnet.parameters()) + list(resnet.classifier.parameters())\n",
-    "optimizer_adam = optim.Adam(parameters, lr=1e-4)"
-   ]
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
+    "vocab_size = 2573\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(vocab_size, 10, input_length=1))\n",
+    "model.add(LSTM(1000, return_sequences=True))\n",
+    "model.add(LSTM(1000))\n",
+    "model.add(Dense(1000, activation='relu'))\n",
+    "model.add(Dense(vocab_size, activation='softmax'))\n",
+    "\n",
+    "model.compile(loss='categorical_crossentropy', optimizer=Adam(learning_rate=0.001))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -365,10 +353,10 @@
    "source": [
     "from copy import deepcopy\n",
     "\n",
-    "framework_adapter = 'openfl.plugins.frameworks_adapters.pytorch_adapter.FrameworkAdapterPlugin'\n",
-    "MI = ModelInterface(model=resnet, optimizer=optimizer_adam, framework_plugin=framework_adapter)\n",
+    "framework_adapter = 'openfl.plugins.frameworks_adapters.keras_adapter.FrameworkAdapterPlugin'\n",
+    "MI = ModelInterface(model=model, optimizer=Adam(learning_rate=0.001), framework_plugin=framework_adapter)\n",
     "# Save the initial model state\n",
-    "initial_model = deepcopy(resnet)"
+    "initial_model = deepcopy(model)"
    ]
   },
   {
@@ -392,17 +380,10 @@
     "\n",
     "logger = getLogger(__name__)\n",
     "\n",
-    "import torch\n",
-    "import tqdm\n",
-    "\n",
-    "from losses import ArcFaceLoss, TripletLoss\n",
-    "from tools import AverageMeter, evaluate, extract_feature\n",
-    "\n",
-    "\n",
     "# Task interface currently supports only standalone functions.\n",
     "@TI.register_fl_task(model='model', data_loader='train_loader',\n",
     "                     device='device', optimizer='optimizer')\n",
-    "def train(model, train_loader, optimizer, device):\n",
+    "def train(model, train_loader, optimizer, device=''):\n",
     "    device = torch.device('cuda')\n",
     "    \n",
     "    criterion_cla = ArcFaceLoss(scale=16., margin=0.1)\n",
