--- a/Next Word Prediction.ipynb
+++ b/Next Word Prediction.ipynb
@@ -9,15 +9,14 @@
   },
   {
    "cell_type": "raw",
-   "source": [
-    "!pip install tensorflow"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% raw\n"
     }
-   }
+   },
+   "source": [
+    "!pip install tensorflow==2.5.1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -28,9 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-08-17 18:52:44.566854: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2021-08-17 18:52:44.566887: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import re\n",
@@ -53,6 +61,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -66,13 +79,7 @@
     "\n",
     "file = open('metamorphosis.txt', 'r', encoding = 'utf8').read()\n",
     "data = re.findall('\\w+', file)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,7 +95,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "2573"
+      "text/plain": [
+       "2573"
+      ]
      },
      "execution_count": 11,
      "metadata": {},
@@ -121,7 +130,18 @@
     },
     {
      "data": {
-      "text/plain": "array([[  54,  142],\n       [ 142,   57],\n       [  57,   12],\n       [  12,   95],\n       [  95,  920],\n       [ 920,   29],\n       [  29, 1295],\n       [1295,  921],\n       [ 921,    4],\n       [   4,  242]])"
+      "text/plain": [
+       "array([[  54,  142],\n",
+       "       [ 142,   57],\n",
+       "       [  57,   12],\n",
+       "       [  12,   95],\n",
+       "       [  95,  920],\n",
+       "       [ 920,   29],\n",
+       "       [  29, 1295],\n",
+       "       [1295,  921],\n",
+       "       [ 921,    4],\n",
+       "       [   4,  242]])"
+      ]
      },
      "execution_count": 12,
      "metadata": {},
@@ -183,7 +203,13 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
+      "text/plain": [
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
+      ]
      },
      "execution_count": 15,
      "metadata": {},
@@ -356,7 +382,9 @@
     },
     {
      "data": {
-      "text/plain": "<keras.callbacks.History at 0x164de2e1760>"
+      "text/plain": [
+       "<keras.callbacks.History at 0x164de2e1760>"
+      ]
      },
      "execution_count": 22,
      "metadata": {},
@@ -364,13 +392,13 @@
     }
    ],
    "source": [
-    "model.fit(X, y, epochs=10, batch_size=64, callbacks=[checkpoint, reduce, tensorboard_Visualization])"
+    "model.fit(X, y, epochs=100, batch_size=64, callbacks=[checkpoint, reduce, tensorboard_Visualization])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -384,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
