--- a/workspace/Next_Word_Prediction_FL.ipynb
+++ b/workspace/Next_Word_Prediction_FL.ipynb
@@ -271,22 +271,46 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "foreign-gospel",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f85855c9",
    "metadata": {
     "pycharm": {
-     "name": "#%% raw\n"
+     "name": "#%%\n"
     }
    },
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
+    "vocab_size = 2573\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(vocab_size, 10, input_length=1))\n",
+    "model.add(LSTM(1000, return_sequences=True))\n",
+    "model.add(LSTM(1000))\n",
+    "model.add(Dense(1000, activation='relu'))\n",
+    "model.add(Dense(vocab_size, activation='softmax'))\n",
+    "\n",
+    "model.compile(loss='categorical_crossentropy', optimizer=Adam(learning_rate=0.001))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "420fa426",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from tensorflow.keras import Model as tf_model\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
     "\n",
-    "\"\"\"\n",
-    "Model definition\n",
-    "\"\"\"\n",
     "\n",
     "class Model(tf_model):\n",
+    "    \"\"\" Model definition \"\"\"\n",
+    "\n",
     "    def __init__(self, **kwargs):\n",
     "        super().__init__()\n",
     "\n",
@@ -305,36 +329,29 @@
     "        x = self.d2(x)\n",
     "        return x\n",
     "\n",
+    "    def train_step(self, data):    # https://www.tensorflow.org/guide/keras/customizing_what_happens_in_fit\n",
+    "        # Unpack the data. Its structure depends on your model and\n",
+    "        # on what you pass to `fit()`.\n",
+    "        x, y = data\n",
+    "\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            y_pred = self(x, training=True)  # Forward pass\n",
+    "            # Compute the loss value\n",
+    "            # (the loss function is configured in `compile()`)\n",
+    "            loss = self.compiled_loss(y, y_pred, regularization_losses=self.losses)\n",
+    "\n",
+    "        # Compute gradients\n",
+    "        trainable_vars = self.trainable_variables\n",
+    "        gradients = tape.gradient(loss, trainable_vars)\n",
+    "        # Update weights\n",
+    "        self.optimizer.apply_gradients(zip(gradients, trainable_vars))\n",
+    "        # Update metrics (includes the metric that tracks the loss)\n",
+    "        self.compiled_metrics.update_state(y, y_pred)\n",
+    "        # Return a dict mapping metric names to current value\n",
+    "        return {m.name: m.result() for m in self.metrics}\n",
     "\n",
     "model = Model()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "\n",
-    "vocab_size = 2573\n",
-    "\n",
-    "model = Sequential()\n",
-    "model.add(Embedding(vocab_size, 10, input_length=1))\n",
-    "model.add(LSTM(1000, return_sequences=True))\n",
-    "model.add(LSTM(1000))\n",
-    "model.add(Dense(1000, activation='relu'))\n",
-    "model.add(Dense(vocab_size, activation='softmax'))\n",
-    "\n",
-    "model.compile(loss='categorical_crossentropy', optimizer=Adam(learning_rate=0.001))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
   },
   {
    "cell_type": "markdown",
@@ -354,7 +371,7 @@
     "from copy import deepcopy\n",
     "\n",
     "framework_adapter = 'openfl.plugins.frameworks_adapters.keras_adapter.FrameworkAdapterPlugin'\n",
-    "MI = ModelInterface(model=model, optimizer=Adam(learning_rate=0.001), framework_plugin=framework_adapter)\n",
+    "MI = ModelInterface(model=model, optimizer=optimizer, framework_plugin=framework_adapter)\n",
     "# Save the initial model state\n",
     "initial_model = deepcopy(model)"
    ]
@@ -605,13 +622,13 @@
      "evalue": "build() missing 2 required positional arguments: 'template' and 'settings'",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m/tmp/ipykernel_151142/2383147364.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      6\u001B[0m                     \u001B[0mdata_loader\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mfed_dataset\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      7\u001B[0m                     \u001B[0mrounds_to_train\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m3\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 8\u001B[0;31m                     opt_treatment='GLOBAL')\n\u001B[0m",
-      "\u001B[0;32m~/openfl/openfl/interface/interactive_api/experiment.py\u001B[0m in \u001B[0;36mstart\u001B[0;34m(self, model_provider, task_keeper, data_loader, rounds_to_train, delta_updates, opt_treatment)\u001B[0m\n\u001B[1;32m    155\u001B[0m         \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mlogger\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0minfo\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'Starting experiment!'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    156\u001B[0m         \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mplan\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mresolve\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 157\u001B[0;31m         \u001B[0minitial_tensor_dict\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_get_initial_tensor_dict\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmodel_provider\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    158\u001B[0m         \u001B[0;32mtry\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    159\u001B[0m             response = self.federation.dir_client.set_new_experiment(\n",
-      "\u001B[0;32m~/openfl/openfl/interface/interactive_api/experiment.py\u001B[0m in \u001B[0;36m_get_initial_tensor_dict\u001B[0;34m(self, model_provider)\u001B[0m\n\u001B[1;32m    227\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0m_get_initial_tensor_dict\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmodel_provider\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    228\u001B[0m         \u001B[0;34m\"\"\"Extract initial weights from the model.\"\"\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 229\u001B[0;31m         \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mtask_runner_stub\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mplan\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget_core_task_runner\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmodel_provider\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mmodel_provider\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    230\u001B[0m         tensor_dict, _ = split_tensor_dict_for_holdouts(\n\u001B[1;32m    231\u001B[0m             \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mlogger\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/openfl/openfl/federated/plan/plan.py\u001B[0m in \u001B[0;36mget_core_task_runner\u001B[0;34m(self, data_loader, model_provider, task_keeper)\u001B[0m\n\u001B[1;32m    384\u001B[0m         \u001B[0;31m# We are importing a CoreTaskRunner instance!!!\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    385\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrunner_\u001B[0m \u001B[0;32mis\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 386\u001B[0;31m             \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrunner_\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mPlan\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbuild\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m**\u001B[0m\u001B[0mdefaults\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    387\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    388\u001B[0m         \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrunner_\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mset_data_loader\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdata_loader\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mTypeError\u001B[0m: build() missing 2 required positional arguments: 'template' and 'settings'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_151142/2383147364.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m                     \u001b[0mdata_loader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfed_dataset\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m                     \u001b[0mrounds_to_train\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m                     opt_treatment='GLOBAL')\n\u001b[0m",
+      "\u001b[0;32m~/openfl/openfl/interface/interactive_api/experiment.py\u001b[0m in \u001b[0;36mstart\u001b[0;34m(self, model_provider, task_keeper, data_loader, rounds_to_train, delta_updates, opt_treatment)\u001b[0m\n\u001b[1;32m    155\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Starting experiment!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 157\u001b[0;31m         \u001b[0minitial_tensor_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_initial_tensor_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_provider\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    158\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m             response = self.federation.dir_client.set_new_experiment(\n",
+      "\u001b[0;32m~/openfl/openfl/interface/interactive_api/experiment.py\u001b[0m in \u001b[0;36m_get_initial_tensor_dict\u001b[0;34m(self, model_provider)\u001b[0m\n\u001b[1;32m    227\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_get_initial_tensor_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel_provider\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    228\u001b[0m         \u001b[0;34m\"\"\"Extract initial weights from the model.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 229\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtask_runner_stub\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_core_task_runner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_provider\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_provider\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    230\u001b[0m         tensor_dict, _ = split_tensor_dict_for_holdouts(\n\u001b[1;32m    231\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/openfl/openfl/federated/plan/plan.py\u001b[0m in \u001b[0;36mget_core_task_runner\u001b[0;34m(self, data_loader, model_provider, task_keeper)\u001b[0m\n\u001b[1;32m    384\u001b[0m         \u001b[0;31m# We are importing a CoreTaskRunner instance!!!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    385\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrunner_\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 386\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrunner_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPlan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mdefaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    387\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    388\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrunner_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_data_loader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_loader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: build() missing 2 required positional arguments: 'template' and 'settings'"
      ]
     }
    ],
@@ -656,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
