--- a/workspace/Next_Word_Prediction_FL.ipynb
+++ b/workspace/Next_Word_Prediction_FL.ipynb
@@ -304,8 +304,8 @@
     "    def __init__(self, **kwargs):\n",
     "        super().__init__()\n",
     "\n",
-    "        vocab_size = 2573\n",
-    "        self.emb = Embedding(vocab_size, 10, input_length=1)\n",
+    "        vocab_size = 48904\n",
+    "        self.emb = Embedding(vocab_size, 10, input_length=3)\n",
     "        self.lstm1 = LSTM(1000, return_sequences=True)\n",
     "        self.lstm2 = LSTM(1000)\n",
     "        self.d1 = Dense(1000, activation='relu')\n",
@@ -322,7 +322,7 @@
     "# Construct an instance of Model\n",
     "model = Model()\n",
     "optimizer = Adam(learning_rate=0.001)\n",
-    "model.compile(loss='categorical_crossentropy', optimizer=optimizer)"
+    "model.compile(loss='categorical_crossentropy', optimizer=optimizer, metrics=[tf.keras.metrics.Accuracy()])"
    ],
    "metadata": {
     "collapsed": false,
