set activation function to tanh

--- a/workspace/Next_Word_Prediction_FL.ipynb
+++ b/workspace/Next_Word_Prediction_FL.ipynb
@@ -308,7 +308,7 @@
     "        self.emb = Embedding(vocab_size, 10, input_length=3)\n",
     "        self.lstm1 = LSTM(1000, return_sequences=True)\n",
     "        self.lstm2 = LSTM(1000)\n",
-    "        self.d1 = Dense(1000, activation='relu')\n",
+    "        self.d1 = Dense(1000, activation='tanh')\n",
     "        self.d2 = Dense(vocab_size, activation='softmax')\n",
     "\n",
     "    def call(self, x):\n",
